cmake_minimum_required(VERSION 3.5.1)
project(br)

include_directories(PUBLIC "${CMAKE_SOURCE_DIR}/..")
link_directories(PUBLIC "${CMAKE_SOURCE_DIR}/..")
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
set(libraries "")
set(libraries ${PROJECT_NAME} ${libraries})
aux_source_directory(. source_list)
foreach(source_file ${source_list})
  set(target ${source_file})
  string(REGEX REPLACE "^\./" "" target ${target})
# string(REGEX REPLACE "/" "_" target ${target})
  string(REGEX REPLACE "\.c$" "" target ${target})
  message(STATUS "${source_file} -> ${target}")
  add_executable(${target} ${source_file})
  target_link_libraries(${target} ${libraries})
  install(TARGETS ${target} DESTINATION ${CMAKE_SOURCE_DIR})
endforeach()
